prevent images from stretching

--- a/src/main.css
+++ b/src/main.css
@@ -172,7 +172,6 @@ ul.nav
     max-width 45vw
     max-height 50vh
     min-width 20vw
-    min-height 25vh
 
   a
     position absolute
